--- a/ejercicios.html
+++ b/ejercicios.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Ejercicio #1</h1>
+  <p>Crear un programa javascript que permita verificar si una cadena de texto es un pangrama.</p>
     <table>
         <tr>
             <td><textarea id="cadena" cols="40" rows="5"></textarea></td>
@@ -16,10 +17,13 @@
     <button id="click">Mostrar resultado</button>
     <div id="salidaPangrama" class="salidaPangrama">
     </div>
+    <hr>
     <h1>Ejercicio #4</h1>
+    <p>Escriba un programa de JavaScript para determinar si un año dado es un año bisiesto en el
+      calendario gregoriano.</p>
   <form>
 		<p>
-			Escriba el año: 
+			Ingresar el año: 
 			<input type="text" name="x" size="10"/>
 		</p>
 			<button type="button" onclick="Bisiesto(x)">Mostrar resultado</button>
@@ -27,12 +31,14 @@
 	</form>
 	<div id="salidaBisiesto" class="salidaBisiesto">
 	</div>
+  <hr>
 
   <h1>Ejercicio #5</h1>
+  <p>Escriba un programa de Javascript que devuelva los elementos no únicos ingresado en la lista de enteros.</p>
 
   <form>
 		<p>
-			Escriba el listado de números: 
+			ingresar el listado de números: 
 			<input type="text" name="x" size="10"/>
 		</p>
 			<button type="button" onclick="numDuplicado(x)">Mostrar resultado</button>
@@ -40,11 +46,13 @@
 	</form>
 	<div id="salidaNumDuplicado" class="salidaNumDuplicado">
 	</div>
+  <hr>
   <h1>Ejercicio #6</h1>
+  <p>Escriba un programa de Javascript que convierta números arábigos a números romanos </p>
 
   <form>
 		<p>
-			Escriba un número entre 1 - 1000 para convertir en romano: 
+			Escriba un número entre 1 - 1000: 
 			<input type="text" name="a" size="10"/>
 		</p>
 			<button type="button" onclick="romano(a)">Mostrar resultado</button>
